--- a/css/style.css
+++ b/css/style.css
@@ -22,15 +22,17 @@ body {
   display: grid;
   grid-template-columns: 50px repeat(8, minmax(115px, 1fr)) 50px;
   grid-template-rows: repeat(20, min-content);
-  height: 100vh;
-  gap: 20px; }
+  height: 100vh; }
 
 .Mainsection {
-  grid-template-columns: 50px repeat(8, minmax(115px, 1fr)) 50px;
+  display: grid;
+  padding-left: 100px;
+  padding-right: 250px;
+  grid-template-rows: repeat(4, min-content);
   grid-column: 4/-1;
-  grid-row: 1/-1;
+  grid-row: 2/-1;
   overflow: scroll;
-  height: calc(100vh - 62px); }
+  height: calc(100vh - 42px); }
 
 .Navbar {
   display: grid;
@@ -62,7 +64,8 @@ body {
   grid-template-columns: repeat(6, minmax(20px, 1fr));
   grid-template-rows: repeat(10, 100px);
   grid-column: 2/4;
-  font-family: "Bangers", cursive; }
+  font-family: "Bangers", cursive;
+  height: calc(100vh - 42px); }
   .Sidenav__picture {
     grid-column: 1/-1;
     grid-row: 1/6;
@@ -79,7 +82,7 @@ body {
     grid-row: 2/5;
     font-size: 30px;
     min-width: 200px;
-    line-height: 75px;
+    line-height: 55px;
     background-color: #9A2A7B; }
     .Sidenav__menubar ul {
       list-style-type: none; }
@@ -96,12 +99,12 @@ body {
 .About {
   display: grid;
   grid-template-columns: repeat(8, minmax(max-content, 1fr));
+  grid-column: 1/-1;
   font-family: "Bangers", cursive;
   height: calc( 100vh - 60px);
-  /*100vh height of screen at time minus navbar of 68  height*/
-  padding-top: 62px; }
+  /*100vh height of screen at time minus navbar of 68  height*/ }
   .About__bio {
-    grid-column: 2/7;
+    grid-column: 1/-1;
     color: #000;
     font-size: 24px; }
     .About__bio img {
@@ -122,12 +125,8 @@ body {
       font-size: 32px; }
 
 #Content {
-  display: grid;
-  grid-template-columns: repeat(8, minmax(max-content, 1fr));
-  font-family: "Bangers", cursive;
-  height: calc(100vh - 60px); }
+  font-family: "Bangers", cursive; }
   #Content .Webdev {
-    grid-column: 2/7;
     color: #000;
     font-size: 64px;
     line-height: 68px; }
@@ -137,7 +136,8 @@ body {
       border-bottom-style: solid;
       border-bottom-width: thick;
       font-size: 64px;
-      line-height: 68px; }
+      line-height: 68px;
+      width: 500px; }
     #Content .Webdev__switchit {
       font-size: 24px;
       line-height: 26px;
@@ -164,20 +164,38 @@ body {
       text-shadow: 3px 3px 0 #000, -1px -1px 0 #000,   1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; }
 
 #Resume {
-  display: grid;
-  grid-template-columns: repeat(8, minmax(max-content, 1fr));
   font-family: 'Bangers', cursive;
-  height: calc(100vh - 60px); }
-  #Resume iframe {
-    grid-column: 2/7; }
+  height: 900px;
+  padding-bottom: 80px; }
+  #Resume .resumeline {
+    border-bottom: 40px;
+    border-bottom-color: #E75E5E;
+    border-bottom-style: solid;
+    border-bottom-width: thick;
+    font-size: 64px;
+    line-height: 68px;
+    width: 500px; }
 
-.Contact {
-  display: grid;
+#Contact {
   font-family: 'Bangers', cursive;
-  height: calc(100vh - 60px);
+  font-family: 'Bangers', cursive; }
+  #Contact .info {
+    border-bottom: 40px;
+    border-bottom-color: #E75E5E;
+    border-bottom-style: solid;
+    border-bottom-width: thick;
+    font-size: 64px;
+    line-height: 68px;
+    width: 500px; }
+
+#Technologies {
   font-family: 'Bangers', cursive;
-  grid-column: 2/7; }
-  .Contact__technologies {
-    grid-column: 2/7; }
-  .Contact form {
-    grid-column: 2/4; }
+  padding-bottom: 80px; }
+  #Technologies .techs {
+    border-bottom: 40px;
+    border-bottom-color: #E75E5E;
+    border-bottom-style: solid;
+    border-bottom-width: thick;
+    font-size: 64px;
+    line-height: 68px;
+    width: 500px; }
