--- a/sass/_container2.scss
+++ b/sass/_container2.scss
@@ -4,7 +4,6 @@
   grid-template-columns: 50px repeat(8, minmax(115px, 1fr)) 50px;
   grid-template-rows:repeat(20, min-content);
   height:100vh; //whole viewing space
-  gap:20px;
  
 
   // @media only screen and (max-width: $xlarge) {
@@ -16,13 +15,14 @@
 }
 
 .Mainsection{
-  grid-template-columns: 50px repeat(8, minmax(115px, 1fr)) 50px;
+  display:grid;
+  padding-left: 100px;
+  padding-right: 250px;
+  grid-template-rows: repeat(4, min-content);
   grid-column: 4/-1;
-  grid-row:1/-1;
+  grid-row:2/-1;
   overflow:scroll;
-  height:calc(100vh - 62px);
-  // background-color:$c-yellow;
-  
+  height:calc(100vh - 42px);
 
   // @media only screen and (max-width: $xlarge) {
   //   grid-template-columns: repeat(8, minmax(min-content,1fr)); 
