--- a/sass/_sidenav.scss
+++ b/sass/_sidenav.scss
@@ -3,8 +3,8 @@
   grid-template-columns: repeat(6, minmax(20px, 1fr));
   grid-template-rows: repeat(10, 100px);
   grid-column: 2/4; //location accoring to container2
-
   font-family: "Bangers", cursive;
+  height:calc(100vh - 42px);
 
   // @media only screen and (max-width: $xlarge) {
   //   grid-template-rows: 100px;
@@ -40,34 +40,8 @@
     grid-row: 2/5;
     font-size: 30px;
     min-width: 200px;
-    line-height: 75px;
+    line-height: 55px;
     background-color: $c-purple;
-
-    // &__menubar:after{
-    //   position:absolute;
-    //   width:100%;
-    //   height:100%;
-    // content: '';
-    //   background:inherit;
-    //   top:0;
-    //   right:0;
-    //   bottom:0;
-    //   left:0;
-    //   transform-origin: top right;
-    //   transform:skewY(4deg);
-    // }
-
-    // position:absolute;
-    // width:100%;
-    // height:100%;
-    // content:'';
-    // background:inherit;
-    // top:0;
-    // right:0;
-    // bottom:0;
-    // left:0;
-    // transform-origin: top left;
-    // transform:skewY(4deg);
 
     // @media only screen and (max-width: $large) {
     //   background-color: white;
